Bug 144793 - EDITING: LO Base Absence of scrollbar in the SQL query modification window
Summary: EDITING: LO Base Absence of scrollbar in the SQL query modification window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-09-29 11:33 UTC by LoloSon
Modified: 2022-02-10 07:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Shows the absence of scrollbar in the SQL query modification window (61.74 KB, image/jpeg)
2021-09-29 11:33 UTC, LoloSon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description LoloSon 2021-09-29 11:33:56 UTC
Created attachment 175352 [details]
Shows the absence of scrollbar in the SQL query modification window

Absence of scrollbar in the SQL query modification window
Comment 1 Robert Großkopf 2021-10-14 05:58:01 UTC
Could confirm there is no scrollbar available for the query editor in LO 7.1.0.3 and newer versions with OpenSUSE 15.2 64bit rpm Linux.

Scrollbar does exist in LO 7.0.5.2 on the same system. So a regression.
Comment 2 Aron Budea 2021-11-01 01:26:25 UTC
Bibisected to the following commit using repo bibisect-linux-64-7.1. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=44f7674ffda49257dcc1709256dfc4676d12165c
author		Caolán McNamara <caolanm@redhat.com>	2020-08-18 12:02:45 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-08-19 10:11:30 +0200

weld OQueryTextView
Comment 3 Commit Notification 2021-11-01 14:06:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7624730e3d0197071fe4f904900fecedf8140d67

Resolves: tdf#144793 add scrollbar to sql editview

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2021-11-01 14:06:42 UTC
done in trunk, backport to 7-2 in gerrit
Comment 5 Commit Notification 2021-11-02 10:40:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/4df823c52b02b7cb81e97c9b999a7e7a2296a602

Resolves: tdf#144793 add scrollbar to sql editview

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.