Resolves: tdf#144793 add scrollbar to sql editview

Change-Id: I23126a89c136a134590900c38ccd589fb4ea29a2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124546
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>